--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="CSS/style.css" />
         <link rel=”icon” href=”/favicon.ico” type=”image/x-icon”>
         <link rel="stylesheet" href="css/colorpicker.css" type="text/css" />
-        <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
+        <!-- <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon"> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Сочетание цветов интерьера</title>
