--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
                 <span class="color8" > </span> -->
 
         </div>
+        <div class= "testPicker" id = "testPicker"></div>
         <div class="intro_1" id="gostinaya">
+            
             <span class="color2" ></span>
             <span class="color6" ></span>
             <span class="color5" ></span>
@@ -148,7 +150,7 @@
         <div class="intro_1" id="kitchen">
             <span class="color2" ></span>
             <span class="color3" ></span>
-            <span class="color5" style  = "background: #1131e4"    ></span>
+            <span class="color4" style  = "background: #1131e4"    ></span>
             <!-- <span class="color4" ></span>
             <span class="color5" ></span>
             <span class="color6" ></span>
