--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
                 <span class="color1"><img ></span>
                 <span class="color2"><img ></span>
                 <span class="color3"><img ></span>
+                <span class="color4"><img ></span>
+                <span class="color5"><img ></span>
+                <span class="color6"><img ></span>
+                <span class="color7"><img ></span>
+                <span class="color8"><img ></span>
         </div>
     </div>
        <script src="js1/app.js"></script>
